fix alignment

--- a/css/style.css
+++ b/css/style.css
@@ -129,3 +129,9 @@ a:hover{
 .emptyspace {
     height:50px;
 }
+.col-sm-3{
+    text-align: center;
+}
+#accordion{
+    padding-top: 20px;
+}
